# kdeconnect_waybar

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: docs.yaml
crates/waybar/: Cargo.toml
crates/waybar/src/: main.rs
crates/waybar/src/config/: defaults.rs  mod.rs
crates/waybar/src/formatter/: field.rs  mod.rs  notification.rs
crates/wrapper/: Cargo.toml
crates/wrapper/src/: client.rs  device.rs  lib.rs  notifications.rs  parsing.rs
examples/: config.json
src/: main.rs
src/config/: defaults.rs  mod.rs
src/formatter/: field.rs  mod.rs  notification.rs
src/wrapper/: client.rs  device.rs  error.rs  mod.rs  notifications.rs  parsing.rs  test.rs
