[workspace]
resolver = "3"
members = ["crates/waybar", "crates/wrapper"]

default-members = ["crates/waybar"]


[workspace.package]
name = "kdeconnect_waybar"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
wrapper = { path = "crates/wrapper" }

color-eyre = "0.6.5"
dbus = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
