[workspace]
resolver = "3"
members = ["crates/waybar", "crates/wrapper"]

default-members = ["crates/waybar"]


[workspace.package]
name = "kdeconnect_waybar"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
kdeconnect_wrapper = { path = "crates/wrapper" }

color-eyre = "0.6.5"
dbus = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
dirs = "6.0.0"
regex = "1.12.3"
strum = { version = "0.28.0", features = ["derive"] }
schemars = "1.2.1"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
notify = { version = "8.1.0" }
