[package]
name = "kdeconnect_waybar"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
color-eyre.workspace = true
kdeconnect_wrapper.workspace = true
dirs.workspace = true
regex.workspace = true
strum.workspace = true
thiserror.workspace = true
schemars.workspace = true
clap.workspace = true
